Feat: Profile Panel; TODO: OAuth User Details on Profile

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -98,17 +98,17 @@
 <aside class="sidebar">
     <h2>XeroIMS</h2>
     <nav>
-        <a href="#" class="active" data-tooltip="Dashboard">Dashboard</a>
-        <a href="#" data-tooltip="Category">Category</a>
-        <a href="#" data-tooltip="Products">Products</a>
-        <a href="#" data-tooltip="Suppliers">Suppliers</a>
-        <a href="#" data-tooltip="Purchase">Purchase</a>
-        <a href="#" data-tooltip="Sales">Sales</a>
-        <a href="#" data-tooltip="Billing">Billing</a>
-        <a href="#" data-tooltip="Stock">Stock</a>
-        <a href="#" data-tooltip="Reports">Reports</a>
-        <a href="#" data-tooltip="Profile">Profile</a>
-        <a href="#" data-tooltip="Settings">Settings</a>
+        <a href="/dashboard" class="active" data-tooltip="Dashboard">Dashboard</a>
+        <a href="category" data-tooltip="Category">Category</a>
+        <a href="/products" data-tooltip="Products">Products</a>
+        <a href="/suppliers" data-tooltip="Suppliers">Suppliers</a>
+        <a href="/purchase" data-tooltip="Purchase">Purchase</a>
+        <a href="/sales" data-tooltip="Sales">Sales</a>
+        <a href="/billing" data-tooltip="Billing">Billing</a>
+        <a href="/stock" data-tooltip="Stock">Stock</a>
+        <a href="/reports" data-tooltip="Reports">Reports</a>
+        <a href="/profile" data-tooltip="Profile">Profile</a>
+        <a href="/settings" data-tooltip="Settings">Settings</a>
     </nav>
 </aside>
 
