--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,52 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | XeroIMS</title>
     <link href="https://fonts.cdnfonts.com/css/tt-octosquares-trl" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'TT Octosquares TRL', sans-serif;
-            background-color: #121212;
-            color: #b7ab98;
-            text-align: center;
-            padding-top: 80px;
-            transition: smooth;
-        }
-        .login-container {
-            display: inline-block;
-            background-color: #333333;
-            padding: 40px;
-            border: 1px solid #444;
-            border-radius: 12px;
-            width: 300px;
-        }
-        input, button {
-            font-family: 'TT Octosquares TRL', sans-serif;
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: none;
-            border-radius: 6px;
-            font-size: 15px;
-        }
-        input {
-            background-color: #222;
-            color: #b7ab98;
-        }
-        button {
-            background-color: black;
-            color: #b7ab98;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #1c1c1c;
-        }
-        a {
-            color: #b7ab98;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/login/login.css">
 </head>
 <body>
 <div class="login-container">
