Bug Fixes: Minor Bug Fixes

--- a/src/main/resources/templates/category/edit.html
+++ b/src/main/resources/templates/category/edit.html
@@ -14,7 +14,7 @@
   <nav>
     <a href="/dashboard" data-tooltip="Dashboard">Dashboard</a>
     <a href="/category" class="active" data-tooltip="Category">Category</a>
-    <a href="/css" data-tooltip="Products">Products</a>
+    <a href="/products" data-tooltip="Products">Products</a>
     <a href="/suppliers" data-tooltip="Suppliers">Suppliers</a>
     <a href="/purchase" data-tooltip="Purchase">Purchase</a>
     <a href="/sales" data-tooltip="Sales">Sales</a>
@@ -40,7 +40,7 @@
       </div>
       <div class="btn-group">
         <button type="submit" class="btn-submit">Update</button>
-        <a th:href="@{/category}" class="btn-cancel">Back</a>
+        <a th:href="@{/category}" class="btn-cancel">Cancel</a>
       </div>
     </form>
   </div>
