--- a/src/main/resources/templates/category/add.html
+++ b/src/main/resources/templates/category/add.html
@@ -14,7 +14,7 @@
     <nav>
         <a href="/dashboard" data-tooltip="Dashboard">Dashboard</a>
         <a href="/category" class="active" data-tooltip="Category">Category</a>
-        <a href="/css" data-tooltip="Products">Products</a>
+        <a href="/products" data-tooltip="Products">Products</a>
         <a href="/suppliers" data-tooltip="Suppliers">Suppliers</a>
         <a href="/purchase" data-tooltip="Purchase">Purchase</a>
         <a href="/sales" data-tooltip="Sales">Sales</a>
