Feat: Pricing Implemented and Restructured Supplier CSS

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -16,6 +16,7 @@
         <a href="/category" data-tooltip="Category">Category</a>
         <a href="/products" class="active" data-tooltip="Products">Products</a>
         <a href="/suppliers" data-tooltip="Suppliers">Suppliers</a>
+        <a href="/pricing" data-tooltip="Pricing">Pricing</a>
         <a href="/purchase" data-tooltip="Purchase">Purchase</a>
         <a href="/sales" data-tooltip="Sales">Sales</a>
         <a href="/billing" data-tooltip="Billing">Billing</a>
