--- a/src/main/resources/static/css/products/edit.css
+++ b/src/main/resources/static/css/products/edit.css
@@ -132,7 +132,35 @@ input, select {
         padding: 12px 10px;
         position: relative;
     }
+    .category-select {
+        font-family: 'TT Octosquares TRL', sans-serif;
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+        border: none;
+        border-radius: 6px;
+        font-size: 15px;
+        background-color: #222;
+        color: #b7ab98;
+        appearance: none;
+        cursor: pointer;
+        position: relative;
+        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 140 140' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolyline points='20,50 70,100 120,50' stroke='%23b7ab98' stroke-width='20' fill='none'/%3E%3C/svg%3E");
+        background-repeat: no-repeat;
+        background-position: right 12px center;
+        background-size: 12px;
+    }
 
+    /* Scrollable options */
+    .category-select option {
+        background-color: #1f1f1f;
+        color: #b7ab98;
+    }
+
+    /* Scrollbar styling (WebKit) */
+    .category-select:focus {
+        outline: none;
+    }
     .sidebar nav a::after {
         content: attr(data-tooltip);
         position: absolute;
