Future: Removed quantity addition entry from product add or edit, it will be automated

--- a/src/main/resources/templates/products/edit.html
+++ b/src/main/resources/templates/products/edit.html
@@ -43,10 +43,10 @@
                 <label for="price">Price (₹)</label>
                 <input type="number" id="price" th:field="*{price}" step="0.01" min="0" required />
             </div>
-            <div>
-                <label for="quantity">Quantity</label>
-                <input type="number" id="quantity" th:field="*{quantity}" min="0" required />
-            </div>
+<!--            <div>-->
+<!--                <label for="quantity">Quantity</label>-->
+<!--                <input type="number" id="quantity" th:field="*{quantity}" min="0" required />-->
+<!--            </div>-->
             <div>
                 <label for="category">Category</label>
                 <select id="category" th:field="*{categoryId}" required class="category-select">
