--- a/src/main/resources/templates/purchase.html
+++ b/src/main/resources/templates/purchase.html
@@ -254,7 +254,7 @@
         </select>
       </div>
       <div>
-        <label for="price">Price (₹)</label>
+        <label for="price">Price ($)</label>
         <input type="number" id="price" th:field="*{price}" placeholder="Price will be auto-filled" step="0.01" min="0" readonly />
       </div>
       <div>
@@ -263,7 +263,7 @@
       </div>
       <div>
         <div>
-          <label for="totalPrice">Total Price (₹)</label>
+          <label for="totalPrice">Total Price ($)</label>
           <input type="number" id="totalPrice" th:field="*{totalPrice}" placeholder="Total Price" step="0.01" min="0" readonly />
         </div>
 
@@ -282,4 +282,3 @@
 </script>
 </body>
 </html>
-
