--- a/src/main/resources/templates/sales.html
+++ b/src/main/resources/templates/sales.html
@@ -247,7 +247,7 @@
         <input type="text" id="customer" name="customerName" th:value="${salesDTO.customerName}" placeholder="Enter customer name" required />
       </div>
       <div>
-        <label for="price">Price (₹)</label>
+        <label for="price">Price ($)</label>
         <input type="number" id="price" th:field="*{price}" placeholder="Price will be auto-filled" step="0.01" min="0" readonly />
       </div>
       <div>
@@ -256,7 +256,7 @@
       </div>
       <div>
         <div>
-          <label for="totalPrice">Total Price (₹)</label>
+          <label for="totalPrice">Total Price ($)</label>
           <input type="number" id="totalPrice" th:field="*{totalPrice}" placeholder="Total Price" step="0.01" min="0" readonly />
         </div>
 
