--- a/src/main/resources/templates/suppliers/edit.html
+++ b/src/main/resources/templates/suppliers/edit.html
@@ -16,11 +16,10 @@
         <a href="/category" data-tooltip="Category">Category</a>
         <a href="/products" data-tooltip="Products">Products</a>
         <a href="/suppliers" class="active" data-tooltip="Suppliers">Suppliers</a>
+        <a href="/pricing" data-tooltip="Pricing">Pricing</a>
         <a href="/purchase" data-tooltip="Purchase">Purchase</a>
         <a href="/sales" data-tooltip="Sales">Sales</a>
         <a href="/billing" data-tooltip="Billing">Billing</a>
-        <a href="/stock" data-tooltip="Stock">Stock</a>
-        <a href="/reports" data-tooltip="Reports">Reports</a>
         <a href="/profile" data-tooltip="Profile">Profile</a>
     </nav>
 </aside>
